# Trisoul-AI

./: .env.example  .gitignore  LICENSE  README.md  generate_highlevel_workflow.py  pyproject.toml  requirements.txt
backend/: ai_agent.py  config.py  database.py  evaluation_results.json  evaluation_script.py  firebase_db.py  main.py  memory.py  migrate.py  migrate_to_firebase.py  run_trisoul_evaluation.py  test_agent.py  tools.py
frontend/: auth.js  firebase-config.example.js  index.html  script.js  style.css
